--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Learning node, express and mongoDB",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "dev": "nodemon server.js",
+    "start": "node server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
     "debug": "ndb server.js",
     "watch:js": "parcel watch ./public/js/index.js --out-dir ./public/js --out-file bundle.js",
@@ -31,6 +32,7 @@
     "mongoose": "^5.13.17",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "node": "^20.2.0",
     "nodemailer": "^6.9.1",
     "pug": "^3.0.2",
     "sharp": "^0.32.1",
